# TextEditML

./: .gitignore  CMakeLists.txt  DocumentHandler.cpp  DocumentHandler.h  FileIO.cpp  FileIO.h  TemporaryFile.cpp  TemporaryFile.h  TextEditMLPlugin.cpp  TextEditorArea.qml  TextEditorOptions.qml  TextEditorView.qml  qmldir  texteditml.pro
TextEditML/: CMakeLists.txt  DocumentHandler.cpp  DocumentHandler.h  FileIO.h  TemporaryFile.cpp  TextEditMLPlugin.cpp  TextEditMLPlugin.h  TextEditor.qml  TextEditorInternal.qml  qmldir
TextEditML/Controls/: CMakeLists.txt  TextEditorArea1.qml  qmldir
examples/: TextEditML.qml
